package pers.mtx.builder.improve;

//产品
public class House {
    private String baise;
    private String WAlls;

    public String getBaise() {
        return baise;
    }

    public void setBaise(String baise) {
        this.baise = baise;
    }

    public String getWAlls() {
        return WAlls;
    }

    public void setWAlls(String WAlls) {
        this.WAlls = WAlls;
    }

    public String getRoofed() {
        return roofed;
    }

    public void setRoofed(String roofed) {
        this.roofed = roofed;
    }

    private String roofed;
}
